# MoonahsModMaker

./: .gitignore  CLAUDE.md  Cargo.toml  LINUX.md  README.md  Run EasyIntroModder (dev).bat  Run Moonah's Mod Maker (dev).bat  deadlock-music-tool-spec.md
.github/workflows/: linux.yml
app/: index.html  package-lock.json  package.json
app/scripts/: build-helper.mjs
app/src/: App.css  App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/installer/: installer.nsi  make-installer-art.ps1
app/src-tauri/src/: audio.rs  commands.rs  compile.rs  digimod.rs  host.rs  install.rs  lib.rs  paths.rs  platform.rs  procutil.rs  project.rs  rcon.rs  vpk.rs
app/src/components/: Backdrop.tsx  BuildPreview.tsx  CompileBar.tsx  CustomServer.tsx  DigimodTab.tsx  EasyCompileTab.tsx  EffectPreview.tsx  EffectsBrowser.tsx  ExportModal.tsx  FirstRunWizard.tsx  GameBananaBrowser.tsx  HeroDetail.tsx  HeroGrid.tsx  HeroSoundsSection.tsx  ImportReview.tsx  ImportedMods.tsx  ItemsTab.tsx  LibraryTab.tsx  ModMenuOverlay.tsx  OverrideEditor.tsx  PanoramaPreview.tsx  PauseIcon.tsx  PostersTab.tsx  ProfileSwitcher.tsx  ServerLogPanel.tsx  SetupSection.tsx  SidePanel.tsx  SlotSoundPicker.tsx  SongCard.tsx  SoundBrowser.tsx  Toaster.tsx  (+4 more)
crates/kv3-core/: Cargo.toml
crates/kv3-core/src/: lib.rs
crates/kv3-core/tests/: real_file.rs
tools/poster-manifest/: README.md  curate.py  detect_rects.py
tools/vpk-helper/: Program.cs  vpk-helper.csproj
(+17 files in other folders)
