[package]
name = "kv3-core"
version = "0.1.0"
edition = "2021"
description = "Surgical KV3 (.vsndevts) read/merge for the Deadlock match-intro music tool. Edits only owned array entries; preserves every other byte."

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
